EMT-73 - Fix spacing in filters

--- a/Resources/app/storefront/src/scss/component/_cms-element.scss
+++ b/Resources/app/storefront/src/scss/component/_cms-element.scss
@@ -1,49 +1,16 @@
-.cms-element-product-listing {
-    .cms-element-product-listing-actions {
-        padding: 0;
-        margin-bottom: 24px;
-        gap: 12px;
+.cms-element-product-listing-actions {
+    padding: 0;
+    margin-bottom: 24px;
+    gap: 12px;
 
-        > .col-md-auto {
-            &:first-child {
-                margin-left: auto;
-            }
-        }
-
-        .sorting {
-            margin-top: 0;
-            width: 100%;
-
-            @include media-breakpoint-up(md) {
-                width: 260px;
-            }
+    > .col-md-auto {
+        + .col-md-auto {
+            flex-grow: 1;
         }
     }
-}
 
-.cms-page-default {
-    @include media-breakpoint-up(lg) {
-        .cms-element-product-listing-actions {
-            > .col-md-auto {
-                &:first-child {
-                    padding-right: 0;
-                    padding-left: 260px;
-                    flex-grow: 1;
-                }
-            }
-        }
-    }
-}
-
-.cms-section-sidebar {
-    .cms-element-product-listing-actions {
-        @include media-breakpoint-up(lg) {
-            > .col-md-auto {
-                &:first-child {
-                    @include make-col(6);
-                }
-            }
-        }
+    .sorting {
+        margin-top: 0;
     }
 }
 
@@ -225,6 +192,25 @@
             margin-bottom: 14px;
         }
     }
+
+    .cms-element-product-listing-actions {
+        flex-wrap: nowrap;
+        
+        > .col-md-auto {
+            &:first-child {
+                padding-right: 0;
+                padding-left: 260px;
+                flex-grow: 1;
+            }
+
+            + .col-md-auto {
+                flex-basis: 260px;
+                flex-grow: 0;
+                flex-shrink: 1;
+                text-align: right;
+            }
+        }
+    }        
 }
 
 @include media-breakpoint-up(lg) {
