--- a/Resources/app/storefront/src/scss/page/search/_search.scss
+++ b/Resources/app/storefront/src/scss/page/search/_search.scss
@@ -1,7 +1,11 @@
 .search-page {
   .cms-element-product-listing-wrapper {
     margin-top: 20px;
-  } 
+  }
+
+  .filter-panel-wrapper-toggle {
+      margin-bottom: 0;
+  }
 
   @include media-breakpoint-up(lg) {
     .cms-element-product-listing-actions {
